add price user API
